Remove loose usage of the var keyword and some other minor improvements